# llvm-project

./: bolt_passes.csv  notes.txt  tt.py
bolt/include/bolt/Passes/: BinaryPasses.h
bolt/include/bolt/Rewrite/: RewriteInstance.h
bolt/lib/Passes/: ADRRelaxationPass.cpp  Aligner.cpp  AllocCombiner.cpp  AsmDump.cpp  BinaryPasses.cpp  CMOVConversion.cpp  FixRISCVCallsPass.cpp  FixRelaxationPass.cpp  FrameOptimizer.cpp  HFSort.cpp  Hugify.cpp  IdenticalCodeFolding.cpp  IndirectCallPromotion.cpp  Inliner.cpp  JTFootprintReduction.cpp  LongJmp.cpp  LoopInversionPass.cpp  PLTCall.cpp  PatchEntries.cpp  RegReAssign.cpp  ReorderAlgorithm.cpp  ReorderData.cpp  ReorderFunctions.cpp  RetpolineInsertion.cpp  SplitFunctions.cpp  StokeInfo.cpp  TailDuplication.cpp  ThreeWayBranch.cpp  ValidateInternalCalls.cpp  ValidateMemRefs.cpp  VeneerElimination.cpp
bolt/lib/Profile/: DataAggregator.cpp
bolt/lib/Rewrite/: RewriteInstance.cpp
bolt/tools/: CMakeLists.txt
bolt/tools/check-cfi/: CMakeLists.txt  check-cfi.cpp
